Bug 119527 - Sidebar: Focus can become hidden when panel is collapsed with mouse click
Summary: Sidebar: Focus can become hidden when panel is collapsed with mouse click
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.6.2 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-27 06:08 UTC by Jim Raykowski
Modified: 2018-08-30 21:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-08-27 06:08:24 UTC
Steps to reproduce in Writer Sidebar Properties deck
1) Open Sidebar Menu > View > Sidebar or Ctrl+F5
2) Open Properties Deck which is the first tab button in the Sidebar tab bar
3) Click in the Style panel "Set Paragraph Style" combobox, version tested has "Default Style" as default
Focus/Cursor is in combobox 
4) Click on Style panel title

Results: Style panel collapses and focus is hidden (it is still in the combobox)

Expected Results: Focus changes to Style panel title

Tested with:

Version:5.1.6.2
Build ID: 1:5.1.6~rc2-0ubuntu1-xenial4

and

Version: 6.2.0.0.alpha0+
Build ID: a66b8cf8acc1a91785469938336ce8976d4175fc
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-08-27 08:58:37 UTC
Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 63f8c506637c910ed1efa572f23ff1af7715e7e3
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 2 Jim Raykowski 2018-08-28 08:51:16 UTC
Here is a patch that places the focus on the panel title on mouse click:
https://gerrit.libreoffice.org/#/c/59694/
Comment 3 Commit Notification 2018-08-29 14:41:18 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ee057d06f3d27ce3b4e92b76d070fbe75204a41

tdf#119527 Fix focus hidden by mouse click panel collapse

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.