tdf#119527 Fix focus hidden by mouse click panel collapse

Set focus to the clicked panel title

Change-Id: I65993a6a2f8e7a9a2bdaa6cf4527d5b163d81409